--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/KostiantynKaluhin/goit-js-hw-12-countries/issues"
   },
-  "homepage": "https://github.com/KostiantynKaluhin/goit-js-hw-12-countries#readme",
+  "homepage": "https://github.com/KostiantynKaluhin/goit-js-hw-12-countries",
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
     "pnotify": "^5.2.0",
