--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries",
-    "predeploy": "npm run build -- --public-url=goit-js-hw-12-countries",
-     "deploy": "gh-pages -d dist"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries"
+   
   },
   "repository": {
     "type": "git",
